[project]
description = "AWS SSM Parameter Update Utility"
dependencies = ["boto3>=1.34.136"]
name = "aws-ssm-parameter"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Private :: Internal PrimeFT Use Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(
      \.git
    | \.github
    | \.__pycache__
    | \.__pytest_cache__
    | \.vscode
    | \.venv
    | \.direnv
    | alembic
    | _build
    | build
    | venv
  )/
  | .env.py
  | .envrc.py
)
'''

[tool.flake8]
max-line-length = 120
extend-ignore = ["B008"]
exclude = [
  "__pycache__",
  "alembic",
  ".direnv",
  ".env",
  ".envrc",
  ".git",
  ".github",
  ".pytest_cache",
  "venv",
]

[tool.isort]
profile = "black"
multi_line_output = 3
force_sort_within_sections = true
include_trailing_comma = true

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = "tests/"
plugins = ["pydantic.mypy"]
